# Claude-PR-Reviewer

./: .env.example  DEPLOY.md  README.md  package-lock.json  package.json  railway.toml
prompts/: games.md  system.md
python_app/: .dockerignore  .env.example  Dockerfile  README.md  deploy_to_railway.py  dev.py  main.py  pyproject.toml  railway.toml  requirements.txt  test_app.py
python_app/app/: __init__.py  config.py
python_app/app/middleware/: auth.py
python_app/app/prompts/: shop.md
python_app/app/routes/: health.py  review.py
python_app/app/services/: cache.py  claude.py  github.py  review.py
python_app/tests/: test_reliability.py
src/: config.js  index.js
src/middleware/: auth.js
src/routes/: health.js  review.js
src/services/: cache.js  claude.js  github.js  review.js
