[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-pr-review-api"
version = "1.0.0"
description = "REST API for AI-powered PR code review via Claude"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "anthropic==0.7.8",
    "PyGithub==2.1.1",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
]

[project.scripts]
claude-pr-review = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*"]